// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton Component should render basic skeleton correctly 1`] = `
<div>
  <div
    class="animate-pulse rounded-md bg-primary/10"
  />
</div>
`;

exports[`Skeleton Component should render common UI element skeletons 1`] = `
<div>
  <div
    class="space-y-4"
  >
    <div
      class="animate-pulse bg-primary/10 h-12 w-12 rounded-full"
    />
    <div
      class="space-y-2"
    >
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-3/4"
      />
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-1/2"
      />
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-5/6"
      />
    </div>
    <div
      class="space-y-3"
    >
      <div
        class="animate-pulse bg-primary/10 h-32 w-full rounded-lg"
      />
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-2/3"
      />
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-1/3"
      />
    </div>
    <div
      class="animate-pulse bg-primary/10 h-9 w-24 rounded-md"
    />
  </div>
</div>
`;

exports[`Skeleton Component should render grid layout skeletons 1`] = `
<div>
  <div
    class="grid grid-cols-3 gap-4"
  >
    <div
      class="animate-pulse bg-primary/10 h-32 w-full rounded-lg"
    />
    <div
      class="animate-pulse bg-primary/10 h-32 w-full rounded-lg"
    />
    <div
      class="animate-pulse bg-primary/10 h-32 w-full rounded-lg"
    />
    <div
      class="animate-pulse bg-primary/10 h-32 w-full rounded-lg"
    />
    <div
      class="animate-pulse bg-primary/10 h-32 w-full rounded-lg"
    />
    <div
      class="animate-pulse bg-primary/10 h-32 w-full rounded-lg"
    />
  </div>
</div>
`;

exports[`Skeleton Component should render loading card layout 1`] = `
<div>
  <div
    class="space-y-4 rounded-lg border p-6"
  >
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="animate-pulse bg-primary/10 h-12 w-12 rounded-full"
      />
      <div
        class="space-y-2"
      >
        <div
          class="animate-pulse rounded-md bg-primary/10 h-4 w-32"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-4 w-24"
        />
      </div>
    </div>
    <div
      class="animate-pulse rounded-md bg-primary/10 h-32 w-full"
    />
    <div
      class="space-y-2"
    >
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-full"
      />
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-4/5"
      />
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-3/5"
      />
    </div>
  </div>
</div>
`;

exports[`Skeleton Component should render loading table layout 1`] = `
<div>
  <div
    class="space-y-4"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="animate-pulse rounded-md bg-primary/10 h-8 w-32"
      />
      <div
        class="animate-pulse rounded-md bg-primary/10 h-8 w-8"
      />
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="animate-pulse rounded-md bg-primary/10 h-12 w-12"
      />
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-full"
      />
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="animate-pulse rounded-md bg-primary/10 h-12 w-12"
      />
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-full"
      />
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="animate-pulse rounded-md bg-primary/10 h-12 w-12"
      />
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-full"
      />
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="animate-pulse rounded-md bg-primary/10 h-12 w-12"
      />
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-full"
      />
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="animate-pulse rounded-md bg-primary/10 h-12 w-12"
      />
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-full"
      />
    </div>
  </div>
</div>
`;

exports[`Skeleton Component should render responsive skeletons 1`] = `
<div>
  <div
    class="animate-pulse rounded-md bg-primary/10 h-16 w-16 md:h-24 md:w-24 lg:h-32 lg:w-32"
  />
</div>
`;

exports[`Skeleton Component should render with custom animations 1`] = `
<div>
  <div
    class="rounded-md bg-primary/10 animate-pulse"
  />
   
  <div
    class="rounded-md bg-primary/10 animate-[pulse_2s_ease-in-out_infinite]"
  />
   
  <div
    class="rounded-md bg-primary/10 animate-none"
  />
   
</div>
`;

exports[`Skeleton Component should render with custom className 1`] = `
<div>
  <div
    class="animate-pulse rounded-md bg-primary/10 custom-skeleton h-8 w-32"
  />
</div>
`;

exports[`Skeleton Component should render with different shapes 1`] = `
<div>
  <div
    class="animate-pulse bg-primary/10 h-8 w-8 rounded-full"
  />
   
  <div
    class="animate-pulse bg-primary/10 h-8 w-32 rounded-md"
  />
   
  <div
    class="animate-pulse bg-primary/10 h-8 w-32 rounded-none"
  />
   
  <div
    class="animate-pulse bg-primary/10 h-8 w-32 rounded-full"
  />
   
</div>
`;

exports[`Skeleton Component should render with different sizes 1`] = `
<div>
  <div
    class="animate-pulse rounded-md bg-primary/10 h-4 w-16"
  />
   
  <div
    class="animate-pulse rounded-md bg-primary/10 h-6 w-24"
  />
   
  <div
    class="animate-pulse rounded-md bg-primary/10 h-8 w-32"
  />
   
  <div
    class="animate-pulse rounded-md bg-primary/10 h-12 w-48"
  />
   
</div>
`;
